fix: union git rebase

--- a/index.html
+++ b/index.html
@@ -10,5 +10,12 @@
 
     <script src="index.js"></script>
 
+    <script>
+        //code
+        window.onload = function () {
+            console.log('Inicio')
+        };
+    </script>
+
 </body>
 </html>
